[package]
name = "perfect-matching"
version = "0.1.2"
edition = "2024"
authors = ["guillaume canat <gui.canat@gmail.com>"]
description = "linear sum assignment solvers"
readme = "README.md"
repository = "https://github.com/gcanat/perfect-matching/"
license = "MIT"
keywords = ["lsap", "linearsumassignment", "jonker-volgenant"]

[features]
simd = ["dep:pulp", "dep:bytemuck"]

[dependencies]
bytemuck = { version = "1.25.0", optional = true }
num-traits = "0.2.19"
pulp = { version = "0.20", optional = true }
